[package]
name = "edn"
version = "0.3.0"
authors = ["Utkarsh Kukreti <utkarshkukreti@gmail.com>"]
description = "An EDN (Extensible Data Notation) parser."
license = "MIT"
documentation = "https://docs.rs/edn"
homepage = "https://github.com/utkarshkukreti/edn.rs"
repository = "https://github.com/utkarshkukreti/edn.rs"
categories = ["parser-implementations"]

[dependencies]
ordered-float = "0.4.0"
im = {version = "12.2.0", optional = true}
serde = "1.0.84"
itoa = "0.4.3"
ryu = "0.2.7"

[features]
immutable = ["im"]

#[[test]]
#name = "immutable-test"
#path = "tests/immutable_tests.rs"
#required-features = ["immutable"]
